Implementacion de la funcionalidad completa de Gestion de Albumes Fotograficos / Pendiente terminar de implementar gestion de imagenes

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -6,7 +6,7 @@
     <p>{{description}}</p>
   </div>
 
-  <a class="btn-add" href="#">Crear album</a>
+  <a class="btn-add" [routerLink]="['/crear-album']">Crear album</a>
 
   <div class="clearfix"></div>
 
